--- a/honeytrap-backend/requirements.txt
+++ b/honeytrap-backend/requirements.txt
@@ -1,15 +1,26 @@
+bidict==0.23.1
 blinker==1.9.0
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cryptography==45.0.5
 Flask==3.1.1
 flask-cors==6.0.0
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+h11==0.16.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 pillow==11.3.0
+pycparser==2.22
+PyJWT==2.10.1
+python-engineio==4.12.2
+python-socketio==5.13.0
 reportlab==4.4.2
+simple-websocket==1.1.0
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
+wsproto==1.2.0
